<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cireson Scanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_caps">WELCOME!</string>
    <string name="action_settings">Settings</string>
    <string name="login_caps">LOG IN</string>
    <string name="title_activity_login">Log In</string>
    <string name="hint_password">Password</string>
    <string name="hint_user">User</string>
    <string name="hint_url_caps">URL</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY CONTENT</string>
    <string name="title_activity_review_assets">ReviewAssetsActivity</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_inventory_audit">Inventory Audit</string>
    <string name="title_configure_settings">Configure Settings</string>
    <string name="title_edit_assets">Edit Assets</string>
    <string name="title_dispose_assets">Dispose Assets</string>
    <string name="title_review_assets">Review Assets</string>
    <string name="title_swap_assets">Swap Assets</string>
    <string name="title_activity_search_assets">SearchAssetsActivity</string>
    <string name="title_activity_asset_search_results">AssetSearchResultsActivity</string>
    <string name="title_activity_scan_assets">ScanAssets</string>
    <string name="title_activity_match_confirmation">MatchConfirmationActivity</string>
    <string name="title_activity_asset_properties">AssetPropertiesActivity</string>
    <string name="hint_search_by_keyword">Search by Keyword on Order#</string>
    <string name="search_asset">Search Asset</string>
    <string name="text_or">- or -</string>
    <string name="browse_all_products">Browse All Products</string>
    <string name="title_activity_inventory_audit">InventoryAudit</string>
    <string name="title_activity_configure_settings">ConfigureSettings</string>
    <string name="button_scan">Scan</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="scan_bar_code">Scan Barcode</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_anything">Scan Codes</string>
    <string name="result_succeeded">Found barcode</string>
    <string name="result_failed">No barcode found</string>
    <string name="barcode_exists">Barcode exists</string>
    <string name="result_failed_why">The user gave up and pressed Back button</string>
    <string name="ok_button">OK</string>
    <string name="touch_to_scan">Tap to Scan</string>
    <string name="next">Next</string>
    <string name="scanned_items">Scanned Items</string>
    <string name="title_activity_main_nav_ex">MainNavExActivity</string>
    <string name="title_activity_inventory_search">InventorySearchActivity</string>

</resources>
