<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#e0e0e0"
    tools:context="com.cireson.scanner.view.LoginActivity$PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/hint_url_caps"
            android:id="@+id/editUrl"
            android:layout_marginBottom="30dp"
            android:layout_centerVertical="true"
            android:gravity="start" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/editUser"
            android:layout_marginBottom="30dp"
            android:layout_centerVertical="true"
            android:hint="@string/hint_user" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editPassword"
            android:hint="@string/hint_password"
            android:layout_marginBottom="30dp"
            android:layout_centerVertical="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_caps"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
