<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/scannerScrollView"
    android:background="#e0e0e0"
    android:fillViewport="true"
    tools:context="com.cireson.scanner.view.ScanAssetsActivity$PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:id="@+id/linear_layout">

        <Button android:id="@+id/scan_anything"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/scanner_main"
            android:text="@string/touch_to_scan"
            android:gravity="center"
            android:background="#e0e0e0"
            android:layout_marginBottom="5dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#33333333" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/banner_scanned_items"
            android:layout_marginTop="5dp"
            android:text="@string/scanned_items"
            android:layout_marginBottom="10dp"
            android:background="#33333333"
            android:textAlignment="center"
            android:visibility="invisible" />


        <ScrollView
            android:id = "@+id/items_container_scan_assets"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next_button_scan_assets"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:minWidth="100dp"
            android:visibility="invisible"
            />

    </LinearLayout>
</ScrollView>
